--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
 }
+.wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
 
 .App-logo {
   height: 40vmin;
@@ -36,3 +42,4 @@
     transform: rotate(360deg);
   }
 }
+
