hope that it last version

--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -62,6 +62,12 @@
 
 }
 
+.logoutbtn{
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  cursor: pointer;
+}
+
 .burger{
   display: none;
 }
@@ -75,7 +81,7 @@
   }
 
   .content{
-    margin: 5px;
+    margin: 5px 28px;
     width: 90vw;
 
     .list{
