--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -6,7 +6,13 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
+  overflow-x: hidden;
 }
+
+.wrapperfalse{
+  position: fixed;
+}
+
 
 .App-logo {
   height: 40vmin;
