--- a/client/src/components/Main/Questions/Questions.module.scss
+++ b/client/src/components/Main/Questions/Questions.module.scss
@@ -22,6 +22,15 @@ h1{
 }
 
 @media (max-width:980px){
+  .wrapper{
+    h1{
+      font-size: 35px;
+    }
+
+    h3{
+      font-size: 20px;
+    }
+  }
   .accordion{
     width: 90vw;
   }
