--- a/client/src/components/Main/VideoBlock/VideoBlock.module.scss
+++ b/client/src/components/Main/VideoBlock/VideoBlock.module.scss
@@ -95,6 +95,11 @@
 
 
 @media (max-width: 980px){
+  .wrapper{
+    h1{
+      font-size: 35px;
+    }
+  }
 
   .contentwrapper{
     flex-direction: column;
@@ -113,3 +118,4 @@
     z-index: 1;
   }
 }
+
